--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,6 @@
       "@types/node": "^8.0.29",
       "@types/yup": "^0.29.8",
       "ts-node": "3.3.0",
-      "ts-node-dev": "^1.0.0-pre.63",
-      "typescript": "3.3.3333"
+      "ts-node-dev": "^1.0.0-pre.63"
    }
 }
